--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="/qr-code-component-main/images/image-qr-code.png" alt="qr code" class="qrCode">
+    <img src="/images/image-qr-code.png" alt="qr code" class="qrCode">
     <h1>Improve your front-end skills by building projects</h1>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
